simon-palacios fase 1-3

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Bienvenido al sistema Skynet</title>
 </head>
 <body>
+    <h1>Sistema Skynet - Agencia de Inteligencia</h1>
+    <p>Presiona F12 para abrir la consola y ver los sospechosos registrados en el sistema.</p>
 
     <script src="script.js"></script>
     
